# oatlog

./: .gitattributes  .gitignore  .gitmodules  Cargo.nix  Cargo.toml  README.md  TODO.md  flake.nix
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: cargo-test.yaml  report.yaml
comparative-test/: Cargo.toml
comparative-test/additional/: permutation_bugs.egg  quadratic.egg
comparative-test/egglog-testsuite/: antiunify.egg  array.egg  bdd.egg  before-proofs.egg  eqsolve.egg  fibonacci-demand.egg  fibonacci.egg  include.egg  integer_math.egg  intersection.egg  knapsack.egg  math-microbenchmark.egg  pathproof.egg  repro-unsound.egg
comparative-test/src/: lib.rs  main.rs
doc/: papers.csv
doc/datalog/: main.typ
doc/egglog/: main.typst
doc/egraph_workshop_presentation/: main.typ
doc/eqlog/: main.typ
doc/eqsat_semantics/: main.typ
doc/extended_abstract/: Makefile  benchmarks.py  main.typ  refs.bib
doc/figures/: architecture.dot  compilation_passes.dot  cse_post.dot  cse_pre.dot  cse_to_egraph.dot  cse_to_egraph_dag.dot  cse_to_egraph_post.dot  egraph_cluster.dot  egraph_example.dot  egraph_example0.dot  egraph_example1.dot  egraph_example2.dot  egraph_example3.dot  passes_vs_peepholes.dot  peephole_example.dot
doc/final_presentation/: main.typ
doc/ideas/: main.typ
doc/join_algorithms/: main.typ
doc/planning_report/: Makefile  architecture.dot  banned_words.txt  main.typ  makefile  refs.bib
doc/presentation/: Makefile  llvm_passes.txt  main.typ
doc/proposal/: main.typ  refs.bib
doc/report/: .gitignore  Makefile  benchmark_plot.py  egglog.sublime-syntax  egraph.rs  egraph_cluster.dot  example_codegen.rs  main.typ  refs.bib  simple_egraph.py  simple_rewrite_rules.py  simple_union_find.py
doc/seminar1/: main.typ
doc/seminar2/: notes.typ  response_notes.typ
doc/study/: bloom_filters.typ  databases.typ  datalog.typ  egg.typ  egglog.typ  egraph_applications.typ  eqlog.typ  eqsat_semantics.typ  join_algorithms.typ  main.typ  son.typ  special_cases.typ
egraph/: Cargo.toml
egraph-bench/: Cargo.toml
egraph-bench/src/: main.rs
egraph-core/: Cargo.toml  foo.egglog
egraph-core/src/: codegen.rs  compute_index.rs  expect_tests.rs  frontend.rs  hir.rs  ids.rs  index_selection.rs  lib.rs  lir.rs  query_planning.rs  runtime.rs  todo.rs  todo2.rs  todo3.rs  todo4.rs  todo5.rs  typed_vec.rs  union_find.rs
egraph-core/src/frontend/: egglog_ast.rs  sexp.rs  span.rs
egraph-core/src/todo/: mod.rs  todo3.rs  todo4.rs  todo5.rs  todo_join.rs
egraph-macro/: Cargo.toml
egraph-macro/src/: lib.rs
egraph-test/: Cargo.toml
egraph-test/src/: lib.rs
egraph/src/: frontend.rs  hir.rs  lib.rs  main.rs  union_find.rs
egraph_macros/: Cargo.toml
egraph_macros/src/: frontend.rs  lib.rs  main.rs
egraph_scratch/: Cargo.nix  Cargo.toml  flake.nix
egraph_scratch/src/: main.rs
examples/api-demo/: Cargo.toml
examples/api-demo/src/: main.rs
examples/boolean-adder/: Cargo.toml
examples/boolean-adder/src/: main.rs
examples/extract-demo/: Cargo.toml
examples/extract-demo/src/: main.rs
examples/lambda/: Cargo.toml
examples/lambda/src/: main.rs
examples/math/: Cargo.toml
examples/math/src/: main.rs
examples/partial-integration/: Cargo.toml
examples/partial-integration-fueled/: Cargo.toml
examples/partial-integration-fueled/src/: main.rs
examples/partial-integration/src/: main.rs
examples/quadratic-formula/: Cargo.toml
examples/quadratic-formula-extract/: Cargo.toml
examples/quadratic-formula-extract/src/: main.rs
examples/quadratic-formula/src/: main.rs
examples/simple-forall/: Cargo.toml
examples/simple-forall/src/: main.rs
examples/test-api/: Cargo.toml
examples/test-api/src/: main.rs
experiments/: Cargo.toml
experiments/benches/: build_hashmap.rs
oatlog/: Cargo.toml
oatlog-bench/: .gitignore  Cargo.toml  benchmarks.rs
oatlog-bench/benches/: comparative.rs
oatlog-bench/input/: boolean_adder.egg  eggcc_raytrace_benchmark.egglog  fuel1_math.egg  fuel2_math.egg  fuel3_math.egg  fuel_math.egg  math.egg
oatlog-bench/src/: lib.rs  main.rs
oatlog-core/: Cargo.toml
oatlog-core/src/: codegen.rs  expect_tests.rs  frontend.rs  hir.rs  ids.rs  index_selection.rs  lib.rs  lir.rs  query_planning.rs  runtime.rs  tir.rs  typed_set.rs  typed_vec.rs  union_find.rs
oatlog-core/src/codegen/: mod.rs  query.rs  table_relation.rs
oatlog-core/src/frontend/: egglog_ast.rs  mod.rs  primitive.rs  primitive_mvp.rs  sexp.rs  span.rs
oatlog-core/src/runtime/: generic.rs  global_vars.rs  mod.rs  row.rs  uf.rs
oatlog-core/src/runtime/index/: fallback_static.rs  mod.rs  proptest.rs  sorted_vec.rs
oatlog-core/src/todo/: mod.rs  todo1.rs  todo2.rs  todo3.rs  todo5.rs  todo_congruence.rs  todo_deferred_index_creation.rs  todo_extract.rs  todo_hir.rs  todo_ilp_union_find.rs  todo_join.rs  todo_mathset.rs  todo_mutate_hashcons.rs  todo_scratch.rs  todo_seminaive.rs  todo_slotted.rs  todo_tir.rs  todo_vectorize.rs
oatlog-macro/: Cargo.toml
oatlog-macro/src/: lib.rs
oatlog-test/: Cargo.toml
oatlog-test/src/: lib.rs
oatlog/src/: lib.rs  main.rs
shrink_scratch/: Cargo.toml
shrink_scratch/src/: main.rs
