[workspace]
members = [
    "egraph",
    "egraph-core",
    "egraph-macro",
    "examples/math",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4", features = ["derive"]}
educe = "0.6.0"
egraph-core.path = "egraph-core"
egraph-macro.path = "egraph-macro"
egraph.path = "egraph"
expect-test = "1"
heck = "0.5"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
regex = "1.11.1"
syn = "2.0.96"

[workspace.lints.rust]
unsafe_code = "deny" # override to allow per file
unknown_lints = "deny"
renamed_and_removed_lints = "deny"

rust_2018_idioms = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
future_incompatible = { level = "warn", priority = -1 }
unexpected_cfgs = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }


complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

# cargo
cargo_common_metadata = "allow"
multiple_crate_versions = "warn"
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "warn"
