[package]
name = "egraph-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne.workspace = true
educe.workspace = true
heck.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
syn.workspace = true
smallvec.workspace = true

[dev-dependencies]
expect-test.workspace = true

[lints]
workspace = true
