[package]
name = "experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown.workspace = true
oorandom.workspace = true
voracious_radix_sort.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "build_hashmap"
harness = false

[lints]
workspace = true
