[package]
name = "oatlog-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
oatlog.workspace = true
egglog.workspace = true
criterion.workspace = true
rayon.workspace = true

[dev-dependencies]
expect-test.workspace = true

[[bench]]
name = "comparative"
harness = false

[lints]
workspace = true
