[package]
name = "oatlog-core"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more.workspace = true
educe.workspace = true
heck.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
smallvec.workspace = true
syn.workspace = true
voracious_radix_sort.workspace = true
rand.workspace = true

[dev-dependencies]
expect-test.workspace = true
proptest.workspace = true
proptest-derive.workspace = true

[features]
proptest = []

[lints]
workspace = true
