[package]
name = "oatlog-core"
version = "0.1.0"
edition = "2024"

[dependencies]
darling.workspace = true
derive_more.workspace = true
educe.workspace = true
fnv.workspace = true
heck.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rand.workspace = true
regex.workspace = true
smallvec.workspace = true
syn.workspace = true
voracious_radix_sort.workspace = true

[dev-dependencies]
expect-test.workspace = true
proptest-derive.workspace = true
proptest.workspace = true

[features]
proptest-intense = []

[lints]
workspace = true
