[package]
name = "oatlog-core"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3.workspace = true
darling.workspace = true
getrandom.workspace = true
hashbrown.workspace = true
hashbrown_14.workspace = true
heck.workspace = true
itertools.workspace = true
oorandom.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
syn.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
voracious_radix_sort.workspace = true

[dev-dependencies]
expect-test.workspace = true
proptest.workspace = true

[features]
proptest-intense = []

[lints]
workspace = true
